PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2009, PHP 5.3.0 RC 3
- Upgraded bundled sqlite to version 3.6.14. (Scott)
- Upgraded bundled libmagic to 5.03 in the fileinfo extension. (Scott)

- Added the ability for json_decode() to take a user specified depth. (Scott)

- Disabled SQLite3::loadExtension for threaded SAPIs. (Scott)

- Fixed bug #48257 (PharData throws exception with non-phar tar). (Greg)
- Fixed bug #48227 (NumberFormatter::format leaks memory). (Felipe)
- Fixed bug #48200 (compile failure with mbstring.c when 
  --enable-zend-multibyte is used). (Jani)
- Fixed bug #48188 (Cannot execute a scrollable cursors twice with
  PDO_PGSQL). (Matteo)
- Fixed bug #38802 (max_redirects and ignore_errors).
  (patch by datibbaw@php.net)


07 May 2009, PHP 5.3.0 RC 2
- Upgraded bundled sqlite to version 3.6.13. (Ilia)
- Upgraded bundled PCRE to version 7.9. (Nuno)
- Upgraded bundled libmagic to 5.02 in the fileinfo extension. (Scott)

- Undeprecated ticks. (Arnaud)

- Improved IMAP support (Pierre):
  . Added imap_gc() to clear the imap cache
  . Added imap_utf8_to_mutf7() and imap_mutf7_to_utf8()

- Implemented FR #41712 (curl progress callback: CURLOPT_PROGRESSFUNCTION).
  (sdteffen[at]gmail[dot].com, Pierre)
- Implemented FR #47739 (Missing cURL option do disable IPv6). (Pierre)
- Implemented FR #39637 (Missing cURL option CURLOPT_FTP_FILEMETHOD). (Pierre)

- Added timezone_version_get() to retrieve the version of the used timezone
  database. (Derick)
- Added 'n' flag to fopen to allow passing O_NONBLOCK to the underlying
  open(2) system call. (Mikko)
- Added "dechunk" filter which can decode HTTP responses with chunked
  transfer-encoding. HTTP streams use this filter automatically in case
  "Transfer-Encoding: chunked" header is present in response. It's possible to
  disable this behaviour using "http"=>array("auto_decode"=>0) in stream